--- a/表格.html
+++ b/表格.html
@@ -8,5 +8,9 @@
             <tr><td>1.1</td><td>1.2</td><td>1.3</td></tr>
             <tr><td>2.1</td><td>2.2</td><td>2.3</td></tr>
         </table>
+        <b>真的会加粗吗？</b>
+        <u>下划线</u>
+        <i>xietiziyouma?</i>
+        <s>加删除线？</s>
     </body>
 </html>
